imgui-sys2/third-party/imgui-master/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImVector_ImWchar_t ImVector_ImWchar;
typedef struct ImVector_ImGuiTextFilter_ImGuiTextRange_t
    ImVector_ImGuiTextFilter_ImGuiTextRange;
typedef struct ImVector_char_t ImVector_char;
typedef struct ImVector_ImGuiStorage_ImGuiStoragePair_t
    ImVector_ImGuiStorage_ImGuiStoragePair;
typedef struct ImVector_ImDrawCmd_t ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawChannel_t ImVector_ImDrawChannel;
typedef struct ImVector_ImDrawVert_t ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t ImVector_ImVec2;
typedef struct ImVector_ImDrawListPtr_t ImVector_ImDrawListPtr;
typedef struct ImVector_ImU32_t ImVector_ImU32;
typedef struct ImVector_ImFontPtr_t ImVector_ImFontPtr;
typedef struct ImVector_ImFontAtlasCustomRect_t ImVector_ImFontAtlasCustomRect;
typedef struct ImVector_ImFontConfig_t ImVector_ImFontConfig;
typedef struct ImVector_float_t ImVector_float;
typedef struct ImVector_ImFontGlyph_t ImVector_ImFontGlyph;
typedef struct ImGuiTextFilter_ImGuiTextRange_t ImGuiTextFilter_ImGuiTextRange;
typedef struct ImGuiStorage_ImGuiStoragePair_t ImGuiStorage_ImGuiStoragePair;
typedef struct ImDrawCmdHeader_t ImDrawCmdHeader;
typedef struct ImFontAtlasCustomRect_t ImFontAtlasCustomRect;
typedef struct ImDrawChannel_t
    ImDrawChannel; 
typedef struct ImDrawCmd_t
    ImDrawCmd; 
typedef struct ImDrawList_t
    ImDrawList; 
typedef struct ImDrawListSharedData_t
    ImDrawListSharedData; 
typedef struct ImDrawListSplitter_t
    ImDrawListSplitter; 
typedef struct ImDrawVert_t
    ImDrawVert; 
typedef struct ImFont_t
    ImFont; 
typedef struct ImFontAtlas_t
    ImFontAtlas; 
typedef struct ImFontConfig_t
    ImFontConfig; 
typedef struct ImFontGlyph_t
    ImFontGlyph; 
typedef int ImDrawListFlags;     
typedef void
    *ImTextureID; 
typedef unsigned short ImDrawIdx; 
typedef unsigned int ImGuiID; 
typedef unsigned char ImU8;   
typedef unsigned int
    ImU32; 
typedef unsigned short
    ImWchar16; 
typedef unsigned int
    ImWchar32; 
typedef ImWchar32 ImWchar;
typedef ImWchar16 ImWchar;
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t {
  float x, y;
} ImVec2;
typedef struct ImVec4_t {
  float x, y, z, w;
} ImVec4;
typedef enum {
  ImGuiButtonFlags_None = 0,
  ImGuiButtonFlags_MouseButtonLeft =
      1 << 0, 
  ImGuiButtonFlags_MouseButtonRight = 1 << 1,  
  ImGuiButtonFlags_MouseButtonMiddle = 1 << 2, 
  ImGuiButtonFlags_MouseButtonMask_ = ImGuiButtonFlags_MouseButtonLeft |
                                      ImGuiButtonFlags_MouseButtonRight |
                                      ImGuiButtonFlags_MouseButtonMiddle,
  ImGuiButtonFlags_MouseButtonDefault_ = ImGuiButtonFlags_MouseButtonLeft,
} ImGuiButtonFlags_;
typedef enum {
  ImGuiColorEditFlags_None = 0,
  ImGuiColorEditFlags_NoAlpha =
      1 << 1, 
  ImGuiColorEditFlags_NoPicker =
      1 << 2, 
  ImGuiColorEditFlags_NoOptions =
      1 << 3, 
  ImGuiColorEditFlags_NoSmallPreview =
      1 << 4, 
  ImGuiColorEditFlags_NoInputs =
      1 << 5, 
  ImGuiColorEditFlags_NoTooltip =
      1 << 6, 
  ImGuiColorEditFlags_NoLabel =
      1 << 7, 
  ImGuiColorEditFlags_NoSidePreview =
      1 << 8, 
  ImGuiColorEditFlags_NoDragDrop =
      1 << 9, 
  ImGuiColorEditFlags_NoBorder =
      1 << 10, 
  ImGuiColorEditFlags_AlphaBar =
      1 << 16, 
  ImGuiColorEditFlags_AlphaPreview =
      1 << 17, 
  ImGuiColorEditFlags_AlphaPreviewHalf =
      1
      << 18, 
  ImGuiColorEditFlags_HDR =
      1 << 19, 
  ImGuiColorEditFlags_DisplayRGB =
      1 << 20, 
  ImGuiColorEditFlags_DisplayHSV = 1 << 21, 
  ImGuiColorEditFlags_DisplayHex = 1 << 22, 
  ImGuiColorEditFlags_Uint8 =
      1 << 23, 
  ImGuiColorEditFlags_Float =
      1 << 24, 
  ImGuiColorEditFlags_PickerHueBar = 1
                                     << 25, 
  ImGuiColorEditFlags_PickerHueWheel =
      1 << 26, 
  ImGuiColorEditFlags_InputRGB =
      1 << 27, 
  ImGuiColorEditFlags_InputHSV =
      1 << 28, 
  ImGuiColorEditFlags_DefaultOptions_ =
      ImGuiColorEditFlags_Uint8 | ImGuiColorEditFlags_DisplayRGB |
      ImGuiColorEditFlags_InputRGB | ImGuiColorEditFlags_PickerHueBar,
  ImGuiColorEditFlags_DisplayMask_ = ImGuiColorEditFlags_DisplayRGB |
                                     ImGuiColorEditFlags_DisplayHSV |
                                     ImGuiColorEditFlags_DisplayHex,
  ImGuiColorEditFlags_DataTypeMask_ =
      ImGuiColorEditFlags_Uint8 | ImGuiColorEditFlags_Float,
  ImGuiColorEditFlags_PickerMask_ =
      ImGuiColorEditFlags_PickerHueWheel | ImGuiColorEditFlags_PickerHueBar,
  ImGuiColorEditFlags_InputMask_ =
      ImGuiColorEditFlags_InputRGB | ImGuiColorEditFlags_InputHSV,
} ImGuiColorEditFlags_;
typedef enum {
  ImGuiSliderFlags_None = 0,
  ImGuiSliderFlags_AlwaysClamp =
      1 << 4, 
  ImGuiSliderFlags_Logarithmic =
      1 << 5, 
  ImGuiSliderFlags_NoRoundToFormat =
      1 << 6, 
  ImGuiSliderFlags_NoInput = 1 << 7, 
  ImGuiSliderFlags_InvalidMask_ =
      0x7000000F, 
} ImGuiSliderFlags_;
typedef enum {
  ImGuiMouseButton_Left = 0,
  ImGuiMouseButton_Right = 1,
  ImGuiMouseButton_Middle = 2,
  ImGuiMouseButton_COUNT = 5,
} ImGuiMouseButton_;
typedef enum {
  ImGuiMouseCursor_None = -1,
  ImGuiMouseCursor_Arrow = 0,
  ImGuiMouseCursor_TextInput, 
  ImGuiMouseCursor_ResizeAll, 
  ImGuiMouseCursor_ResizeNS,  
  ImGuiMouseCursor_ResizeEW, 
  ImGuiMouseCursor_ResizeNESW, 
  ImGuiMouseCursor_ResizeNWSE, 
  ImGuiMouseCursor_Hand,       
  ImGuiMouseCursor_NotAllowed, 
  ImGuiMouseCursor_COUNT,
} ImGuiMouseCursor_;
typedef enum {
  ImGuiCond_None = 0, 
  ImGuiCond_Always =
      1 << 0, 
  ImGuiCond_Once = 1 << 1, 
  ImGuiCond_FirstUseEver =
      1 << 2, 
  ImGuiCond_Appearing =
      1 << 3, 
} ImGuiCond_;
CIMGUI_API void ImVector_Construct(
    void *vector); 
CIMGUI_API void ImVector_Destruct(
    void *vector); 
typedef struct ImVector_ImGuiTextFilter_ImGuiTextRange_t {
  int Size;
  int Capacity;
  ImGuiTextFilter_ImGuiTextRange *Data;
} ImVector_ImGuiTextFilter_ImGuiTextRange;
typedef struct ImVector_char_t {
  int Size;
  int Capacity;
  char *Data;
} ImVector_char;
typedef struct ImVector_ImGuiStorage_ImGuiStoragePair_t {
  int Size;
  int Capacity;
  ImGuiStorage_ImGuiStoragePair *Data;
} ImVector_ImGuiStorage_ImGuiStoragePair;
typedef struct ImVector_ImDrawCmd_t {
  int Size;
  int Capacity;
  ImDrawCmd *Data;
} ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t {
  int Size;
  int Capacity;
  ImDrawIdx *Data;
} ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawChannel_t {
  int Size;
  int Capacity;
  ImDrawChannel *Data;
} ImVector_ImDrawChannel;
typedef struct ImVector_ImDrawVert_t {
  int Size;
  int Capacity;
  ImDrawVert *Data;
} ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t {
  int Size;
  int Capacity;
  ImVec4 *Data;
} ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t {
  int Size;
  int Capacity;
  ImTextureID *Data;
} ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t {
  int Size;
  int Capacity;
  ImVec2 *Data;
} ImVector_ImVec2;
typedef struct ImVector_ImDrawListPtr_t {
  int Size;
  int Capacity;
  ImDrawList **Data;
} ImVector_ImDrawListPtr;
typedef struct ImVector_ImU32_t {
  int Size;
  int Capacity;
  ImU32 *Data;
} ImVector_ImU32;
typedef struct ImVector_ImFontPtr_t {
  int Size;
  int Capacity;
  ImFont **Data;
} ImVector_ImFontPtr;
typedef struct ImVector_ImFontAtlasCustomRect_t {
  int Size;
  int Capacity;
  ImFontAtlasCustomRect *Data;
} ImVector_ImFontAtlasCustomRect;
typedef struct ImVector_ImFontConfig_t {
  int Size;
  int Capacity;
  ImFontConfig *Data;
} ImVector_ImFontConfig;
typedef struct ImVector_float_t {
  int Size;
  int Capacity;
  float *Data;
} ImVector_float;
typedef struct ImVector_ImFontGlyph_t {
  int Size;
  int Capacity;
  ImFontGlyph *Data;
} ImVector_ImFontGlyph;
typedef struct ImGuiTextFilter_ImGuiTextRange_t {
  const char *b;
  const char *e;
} ImGuiTextFilter_ImGuiTextRange;
typedef struct ImGuiStorage_ImGuiStoragePair_t {
  ImGuiID key;
  union {
    int val_i;
    float val_f;
    void *val_p;
  };
} ImGuiStorage_ImGuiStoragePair;
typedef void (*ImDrawCallback)(const ImDrawList *parent_list,
                               const ImDrawCmd *cmd);
typedef struct ImDrawCmd_t {
  ImVec4 ClipRect; 
  ImTextureID TextureId;  
  unsigned int VtxOffset; 
  unsigned int IdxOffset; 
  unsigned int
      ElemCount; 
  ImDrawCallback UserCallback; 
  void *UserCallbackData; 
} ImDrawCmd;
typedef struct ImDrawVert_t {
  ImVec2 pos;
  ImVec2 uv;
  ImU32 col;
} ImDrawVert;
typedef struct ImDrawCmdHeader_t {
  ImVec4 ClipRect;
  ImTextureID TextureId;
  unsigned int VtxOffset;
} ImDrawCmdHeader;
typedef struct ImDrawChannel_t {
  ImVector_ImDrawCmd _CmdBuffer;
  ImVector_ImDrawIdx _IdxBuffer;
} ImDrawChannel;
typedef struct ImDrawListSplitter_t {
  int _Current;                     
  int _Count;                       
  ImVector_ImDrawChannel _Channels; 
} ImDrawListSplitter;
typedef struct ImDrawList_t {
  ImVector_ImDrawCmd CmdBuffer;  
  ImVector_ImDrawIdx IdxBuffer;  
  ImVector_ImDrawVert VtxBuffer; 
  ImDrawListFlags Flags;         
  unsigned int
      _VtxCurrentIdx; 
  ImDrawListSharedData *_Data; 
  const char *_OwnerName;      
  ImDrawVert *_VtxWritePtr; 
  ImDrawIdx *_IdxWritePtr;  
  ImVector_ImVec4 _ClipRectStack;       
  ImVector_ImTextureID _TextureIdStack; 
  ImVector_ImVec2 _Path;                
  ImDrawCmdHeader _CmdHeader; 
  ImDrawListSplitter
      _Splitter; 
  float _FringeScale; 
} ImDrawList;
typedef struct ImFontConfig_t {
  void *FontData;            
  int FontDataSize;          
  bool FontDataOwnedByAtlas; 
  int FontNo;                
  float SizePixels; 
  int OversampleH;  
  int OversampleV; 
  bool PixelSnapH; 
  ImVec2 GlyphExtraSpacing; 
  ImVec2 GlyphOffset; 
  const ImWchar
      *GlyphRanges; 
  float GlyphMinAdvanceX; 
  float GlyphMaxAdvanceX; 
  bool MergeMode; 
  unsigned int FontBuilderFlags; 
  float RasterizerMultiply; 
  ImWchar EllipsisChar; 
  char Name[40]; 
  ImFont *DstFont;
} ImFontConfig;
typedef struct ImFontGlyph_t {
  unsigned int Colored : 1; 
  unsigned int Visible : 1; 
  unsigned int Codepoint : 30; 
  float AdvanceX;              
  float X0, Y0, X1, Y1;        
  float U0, V0, U1, V1;        
} ImFontGlyph;
typedef struct ImFontAtlasCustomRect_t {
  unsigned short Width, Height; 
  unsigned short X, Y;          
  unsigned int
      GlyphID; 
  float
      GlyphAdvanceX;  
  ImVec2 GlyphOffset; 
  ImFont *Font;       
} ImFontAtlasCustomRect;
typedef struct ImFontAtlas_t {
  ImFontAtlasFlags Flags; 
  ImTextureID TexID;      
  int TexDesiredWidth; 
  int TexGlyphPadding; 
  bool Locked; 
  void *UserData; 
  bool TexReady; 
  bool TexPixelsUseColors; 
  unsigned char
      *TexPixelsAlpha8; 
  unsigned int
      *TexPixelsRGBA32;   
  int TexWidth;           
  int TexHeight;          
  ImVec2 TexUvScale;      
  ImVec2 TexUvWhitePixel; 
  ImVector_ImFontPtr
      Fonts; 
  ImVector_ImFontAtlasCustomRect
      CustomRects; 
  ImVector_ImFontConfig ConfigData; 
  ImVec4 TexUvLines[IM_DRAWLIST_TEX_LINES_WIDTH_MAX +
                    1]; 
  const ImFontBuilderIO
      *FontBuilderIO; 
  unsigned int
      FontBuilderFlags; 
  int PackIdMouseCursors; 
  int PackIdLines; 
} ImFontAtlas;
typedef struct ImFont_t {
  ImVector_float
      IndexAdvanceX; 
  float FallbackAdvanceX; 
  float FontSize; 
  ImVector_ImWchar IndexLookup; 
  ImVector_ImFontGlyph Glyphs;  
  const ImFontGlyph
      *FallbackGlyph; 
  ImFontAtlas *ContainerAtlas; 
  const ImFontConfig *ConfigData; 
  short ConfigDataCount; 
  ImWchar FallbackChar;  
  ImWchar EllipsisChar;  
  short EllipsisCharCount; 
  float EllipsisWidth;     
  float EllipsisCharStep;  
  bool DirtyLookupTables;  
  float Scale; 
  float Ascent, Descent; 
  int MetricsTotalSurface; 
  ImU8 Used4kPagesMap[(IM_UNICODE_CODEPOINT_MAX + 1) / 4096 /
                      8]; 
} ImFont;